# blackbricks

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  Pipfile  README.md  blackbricks.py  publish.sh  pyproject.toml  setup.py  version.py
.github/workflows/: pre-commit.yml  publish.yml  test.yml
blackbricks/: blackbricks.py  cli.py  databricks_sync.py  files.py
test_notebooks/: test.py  test_end_newline.py
tests/: test_check_test_notebook.py  test_files.py
type_stubs/databricks_cli/: __init__.pyi
type_stubs/databricks_cli/sdk/: api_client.pyi  service.pyi
type_stubs/sqlparse/: __init__.pyi
