[tool.poetry]
name = "blackbricks"
version = "0.7.0"
description = "Black for Databricks notebooks"
authors = ["Bendik Samseth <bendik.samseth@inspera.no>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/inspera/blackbricks"
keywords = ["automation", "formatter", "black", "sql", "yapf", "autopep8", "pyfmt", "gofmt", "rustfmt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.scripts]
blackbricks = "blackbricks.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.8.0"
sqlparse = "^0.4.2"
databricks-cli = "^0.17.3"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
flake8 = "^3.9.2"
commitizen = "^2.32.2"
mypy = "^0.971"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.0"
tag_format = "$version"
version_files = [
    "blackbricks/__init__.py:version",
    "pyproject.toml:version"
]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

